2005-02-22  Lars Clausen  <lars@LittlePooter.local.>

	* plug-ins/gprint/diagnomeprint.c (export_data): GNOME, not Gome.
	Fixes bug #168125.

2005-02-19  Lars Clausen  <lars@raeder.dk>

	* app/menus.c (display_menu_items): Applied patch from bug #94019:
	Menu cleanup and addition of icons.  Also a few additional stock
	icons. 

	* app/layer_dialog.c (create_layer_dialog): Bug #159598: Clean up
	the layers dialog.

2005-02-14  Lars Clausen  <lars@LittlePooter.local.>

	* INSTALL (ftp): Fixed Pango release typo (bug #153007)

2005-02-13  Lars Clausen  <lars@raeder.dk>

	* lib/font.c: First stab at using Gtk 2.4 functions for fixing
	width.  Seems to work.  Once tested some more, needs old code
	removed. 

	* lib/widgets.c (dia_font_selector_create_string_item): Avoid
	warning by escaping & properly.

2005-02-06  Lars Clausen  <lars@raeder.dk>

	* app/filedlg.c (file_export_callback): Set correct extension as
	soon every time the dialog is shown.  Fixes bug #162535.

	* app/display.c (ddisplay_set_origo): Use more standard
	transformations.

	* app/modify_tool.c (modify_motion): 
	* app/create_object.c (create_object_motion): Put coordinates of
	handle/object in status bar while moving. Fixes bug #163164.

2005-02-03  Lars Clausen  <lars@raeder.dk>

	* lib/.cvsignore: Added generated files diamarshal.[ch]

2005-02-02  Lars Clausen  <lars@raeder.dk>

	* configure.in: Add GLIB_GENMARSHAL def as suggested in
	http://ignore-your.tv/software/libgtcpsocket/docs/client-subclassing.html.
	Now compiles on Linux.

2005-02-01  Lars Clausen  <lars@raeder.dk>

	* app/sheets.c (sheet_object_mod_get_type_string): We don't really
	need to translate the empty string.  Especially not after
	g_assert_not_reached().  Fixes bug #165966.

2005-01-07  Tim Olsen  <tolsen@alum.mit.edu>

	* objects/UML/activity.c : add fill- and line-colour properties
	[applied by Hans Breuer, fixes bug #163260]

2004-01-28  Hans Breuer  <hans@breuer.org>
